--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "platinum-travel-site",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.js",  
   "scripts": {
     "dev": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.23",
     "css-loader": "^7.1.2",
+    "postcss": "^8.5.6",
+    "postcss-hexrgba": "^2.1.0",
     "postcss-import": "^16.1.1",
     "postcss-loader": "^8.2.0",
     "postcss-mixins": "^11.0.3",
